yard-sale: add change password page

--- a/yard-sale/index.html
+++ b/yard-sale/index.html
@@ -14,10 +14,26 @@
 
 <body>
   <header>
-
+    <div class="logo__wrapper">
+      <img src="./logos/logo_yard_sale.svg" alt="">
+    </div>
   </header>
   <main>
-    <section></section>
+    <section>
+      <p>Create a new password</p>
+      <p>Enter a new password for your account</p>
+      <form action="#" class="change-pass__form">
+        <div class="input-group">
+          <label for="password">Password</label>
+          <input type="password" id="password">
+        </div>
+        <div class="input-group">
+          <label for="re-password">Re-enter password</label>
+          <input type="password" id="re-password">
+        </div>
+        <button>Confirm</button>
+      </form>
+    </section>
   </main>
 </body>
 
