yard-sale: add media query to logo

--- a/yard-sale/index.html
+++ b/yard-sale/index.html
@@ -20,16 +20,16 @@
   </header>
   <main>
     <section>
-      <p>Create a new password</p>
-      <p>Enter a new password for your account</p>
+      <h1 class="title">Create a new password</h1>
+      <p class="subtitle">Enter a new password for your account</p>
       <form action="#" class="change-pass__form">
         <div class="input-group">
           <label for="password">Password</label>
-          <input type="password" id="password">
+          <input type="password" id="password" placeholder="Enter new password...">
         </div>
         <div class="input-group">
           <label for="re-password">Re-enter password</label>
-          <input type="password" id="re-password">
+          <input type="password" id="re-password" placeholder="Enter new password...">
         </div>
         <button>Confirm</button>
       </form>
